<resources>
    <string name="app_name">茶道交流</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sign">登录/注册</string>

    <!--Title-->
    <string name="home_title">茶道交流</string>
    <string name="me_title">我</string>
    <string name="sign_in_title">登录</string>
    <string name="sign_up_title">登录</string>
    <string name="scan_title">扫一扫</string>
    <string name="search_title">搜索</string>
    <string name="setting_title">设置</string>
    <string name="star_title">我的收藏</string>

    <!--登录/注册-->
    <string name="prompt_sign_username">姓名</string>
    <string name="prompt_sign_email">邮箱</string>
    <string name="prompt_login_password">密码</string>
    <string name="prompt_sign_up_password">密码（不少于四位）</string>
    <string name="prompt_sign_up_verification_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_up_short">注册</string>
    <string name="error_field_required">必填</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_invalid_verification_code">验证码不正确</string>
    <string name="error_incorrect_password">用户名或密码不正确</string>
    <string name="permission_rationale">"需要通讯录权限来自动补全用户名"</string>

    <!--搜索提示-->
    <string name="search_hint">搜索</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
